0.18.18:
 - Add flags override implementation.
 - Some advance handling of intrinsic function if passed via kwargs to operations.
 - RD-4607 Improve File System Modules Support.
 - RD-4726-create-a-workflow-for-tfsec
 - Add Heal and Update operations
0.18.17: RD-4653-support-tf-vars
0.18.16:
 - RD-4603 Update Terraform Binary Workflow
 - RD-4693 Add import resource functionality.
0.18.15: RD-4023 Terratag
0.18.14: RD-4372 Make sure that terraform plan only uses module nodes.
0.18.13: Fix issue in tflint
0.18.12: Soft Fail TF Sec
0.18.11:
  - Quiet mode.
  - TFSec
  - RD-4036 Store both JSON and User Friendly plan output in runtime properties
0.18.10: Intermediate release
0.18.9: TFLint
0.18.8:
  - RD-4037 Expose force param for reload template.
0.18.7: RD-3968 Reload params override.
0.18.6: RD-3728 Terraform Plan Params
0.18.5: RD-3880 Report check_status for TF Modules.
0.18.4: RD-3579 fix The Terraform plugin creates lots of temp files and is failing to clean them up.
0.18.3: RD-3723 Handle Backends With Dicts
0.18.2: RD-3769-Handle-Dirs-In-Dirs RD-3772 Display TF Dir Structure in Log
0.18.1: RD-3643-Terraform Backends and New Source
0.18.0: RD-3581-Terraform Backends
0.17.7: Use apply refresh-only for later versions of Terraform instead of refresh.
0.17.6: Overwrite files when using new source.
0.17.5: Rerelease for ARM wagon.
0.17.4:
    - RD-3348: Plan comparison before apply.
    - RD-3451: Let users set max_sleep_time parameter.
0.17.3: Fix Issue.
0.17.2: Update Utilities.
0.17.1: RD-3275 Use general executor.
0.17.0:
    - RD-3165: Plan Operation
0.16.5:
    - RD-3131: Handle bools in Env vars
    - RD-3130: Support provider upgrade flag.
0.16.4:
    - RD-3109: Fix Issue In Reload Template
0.16.3:
    - RD-2915: TF Flattens Dir
0.16.2:
    - Add terraform output handling.
0.16.1:
    - RD-2456-Preserve-TF-File-Permissions
0.16.0:
    - Add pull operation and save resources drifts under runtime properties.
0.15.5: