@@ -15,9 +15,8 @@
 # limitations under the License.
 
 import re
-import sys
 import json
-from os import path, environ
+from os import path
 
 from cloudify_common_sdk.utils import install_binary
 
@@ -49,7 +48,6 @@ class Terratag(TFTool):
         super().__init__(logger, deployment_name, node_instance_name)
         self._installation_source = installation_source
         self.__executable_path = executable_path
-        self._executable_path = None
         self._tags_from_props = tags or {}
         self._tags = {}
         self._tags_string = ''
@@ -203,9 +201,10 @@ class Terratag(TFTool):
                                     .format(message=message))
 
     @staticmethod
-    def from_ctx(_ctx):
-        terratag_config = get_terratag_config(
+    def from_ctx(_ctx, terratag_config=None):
+        terratag_config = terratag_config or get_terratag_config(
             _ctx.node.properties, _ctx.instance.runtime_properties)
+        _ctx.logger.debug('Using terratag_config {}'.format(terratag_config))
         return Terratag(
             _ctx.logger,
             _ctx.deployment.id,
@@ -216,8 +215,6 @@ class Terratag(TFTool):
         command = [self.executable_path,
                    self.tags_string,
                    self.flags_string]
-        if path.dirname(self.terraform_executable) not in environ['PATH']:
-            sys.path.append(path.dirname(self.terraform_executable))
         return self.execute(command, self._terraform_root_module, self.env,
                             return_output=False)
 
