@@ -319,11 +319,11 @@ class TestPlugin(TestBase):
         mock_dep_dir.return_value = mkdtemp()
         setup_linters(ctx=ctx)
         mock_terratag_validate.assert_called_once()
-        mock_terratag_export.assert_called_once()
+        self.assertEqual(mock_terratag_export.call_count, 2)
         mock_tfsec_validate.assert_called_once()
-        mock_tfsec_export.assert_called_once()
+        self.assertEqual(mock_tfsec_export.call_count, 2)
         mock_tflint_validate.assert_called_once()
-        mock_tflint_export.assert_called_once()
+        self.assertEqual(mock_tflint_export.call_count, 2)
 
     @patch('cloudify_tf.terraform.terratag.Terratag.execute')
     @patch('cloudify_tf.terraform.Terraform.init')
