@@ -4,6 +4,7 @@
  - RD-4607 Improve File System Modules Support.
  - RD-4726-create-a-workflow-for-tfsec
  - Add Heal and Update operations
+ - RD-4727-create-workflow-terratag and Some fixes in tflint
 0.18.17: RD-4653-support-tf-vars
 0.18.16:
  - RD-4603 Update Terraform Binary Workflow
